objects/ssot__WorkOrder__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>AccountContact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AddressId__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetWarrantyTermId__c</fullName>
        <label>Asset Warranty Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountPercent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationInMinutes__c</fullName>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationQuantity__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUOMId__c</fullName>
        <label>Duration Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EntitlementProcessEndDateTime__c</fullName>
        <label>Entitlement Process End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EntitlementProcessStartDateTime__c</fullName>
        <label>Entitlement Process Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GenerationMethodCode__c</fullName>
        <label>Generation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeocodeAccuracy__c</fullName>
        <label>Geocode Accuracy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GrandTotalAmount__c</fullName>
        <label>Grand Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Work Order Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <label>Is Closed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGeneratedFromMaintenancePlan__c</fullName>
        <label>Is Generated From Maintenance Plan</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMilestoneCountdownStopped__c</fullName>
        <label>Is Milestone Countdown Stopped</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LineItemCount__c</fullName>
        <label>Line Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneCountdownStopDateTime__c</fullName>
        <label>Milestone Countdown Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneStatusCode__c</fullName>
        <label>Milestone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumCrewSizeNumber__c</fullName>
        <label>Minimum Crew Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentWorkOrderId__c</fullName>
        <label>Parent Work Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceBookId__c</fullName>
        <label>Price Book</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCampaignId__c</fullName>
        <label>Product Service Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCampaignItemId__c</fullName>
        <label>Product Service Campaign Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendedCrewSizeNumber__c</fullName>
        <label>Recommended Crew Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecordTypeName__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderId__c</fullName>
        <label>Return Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderProductId__c</fullName>
        <label>Return Order Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RootWorkOrderId__c</fullName>
        <label>Root Work Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentCount__c</fullName>
        <label>Service Appointment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceReportLanguage__c</fullName>
        <label>Service Report Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTerritoryId__c</fullName>
        <label>Service Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubTotalAmount__c</fullName>
        <label>Sub Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuggestedMaintenanceDateTime__c</fullName>
        <label>Suggested Maintenance DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPriceAmount__c</fullName>
        <label>Total Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderDate__c</fullName>
        <label>Work Order Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderDurationSource__c</fullName>
        <label>Work Order Duration Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderNumber__c</fullName>
        <label>Work Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderPriority__c</fullName>
        <label>Work Order Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderStatusCategory__c</fullName>
        <label>Work Order Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderStatus__c</fullName>
        <label>Work Order Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_AccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_AccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>WorkOrder_AccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_AccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_AddressId_map_Address_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_AddressId_map_Address_Id_N_1</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>WorkOrder_AddressId_map_Address_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_AddressId_map_Address_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>WorkOrder_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>WorkOrder_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_ContractId_map_Contract_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_ContractId_map_Contract_Id_N_1</label>
        <referenceTo>ssot__Contract__dlm</referenceTo>
        <relationshipLabel>WorkOrder_ContractId_map_Contract_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_ContractId_map_Contract_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WorkOrder_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_LocationId_map_Location_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_LocationId_map_Location_Id_N_1</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>WorkOrder_LocationId_map_Location_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_LocationId_map_Location_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_OwnerId_map_UserGroup_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_OwnerId_map_UserGroup_Id_N_1</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>WorkOrder_OwnerId_map_UserGroup_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_OwnerId_map_UserGroup_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WorkOrder_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrder_WorkTypeId_map_WorkType_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_WorkTypeId_map_WorkType_Id_N_1</label>
        <referenceTo>ssot__WorkType__dlm</referenceTo>
        <relationshipLabel>WorkOrder_WorkTypeId_map_WorkType_Id_N_1</relationshipLabel>
        <relationshipName>WorkOrder_WorkTypeId_map_WorkType_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WorkTypeId__c</fullName>
        <label>Work Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009438374_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_ReturnOrderProductId_map_R_rel</label>
        <referenceTo>ssot__ReturnOrderProduct__dlm</referenceTo>
        <relationshipLabel>WorkOrder_ReturnOrderProductId_map_R_rel</relationshipLabel>
        <relationshipName>rel_1702009438374_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009438650_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_ReturnOrderId_map_ReturnOr_rel</label>
        <referenceTo>ssot__ReturnOrder__dlm</referenceTo>
        <relationshipLabel>WorkOrder_ReturnOrderId_map_ReturnOr_rel</relationshipLabel>
        <relationshipName>rel_1702009438650_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009439171_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder_RootWorkOrderId_map_WorkOr_rel</label>
        <referenceTo>ssot__WorkOrder__dlm</referenceTo>
        <relationshipLabel>WorkOrder_RootWorkOrderId_map_WorkOr_rel</relationshipLabel>
        <relationshipName>rel_1702009439171_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>